# far_comms

./: .gitignore  CLAUDE.md  Procfile  README.md  TODO.md  Weiyan Shi_final.json  pyproject.toml  railway.json  requirements.txt  run.sh  slides_pymupdf4llm_output.md  test_analyze_research_simple.py  test_simple.py  update_slides.py
docs/: assemble_socials.md  clean_slides.md  clean_transcript.md  clean_transcript_old.md  prompt_transcript.md  style_LI.md  style_X.md  style_guidelines.md  style_shared.md  style_slides.md  test_instructions.md
scripts/: download_youtube.py
src/far_comms/: analyze_research.py  main.py
src/far_comms/crews/: analyze_talk_crew.py  prepare_talk_crew.py  promote_talk_crew.py  test_talk_crew.py
src/far_comms/crews/config/analyze_talk/: agents.yaml  tasks.yaml
src/far_comms/crews/config/prepare_talk/: agents.yaml  (+1 more)
src/far_comms/handlers/: __init__.py  analyze_research.py  analyze_research_handler.py  analyze_talk.py  prepare_talk.py  prepare_talk_crew_handler.py  prepare_talk_old.py  prepare_talk_simple.py  promote_talk.py  test_talk.py
src/far_comms/models/: __init__.py  requests.py
src/far_comms/tools/: __init__.py  char_counter_tool.py  coda_tool.py
src/far_comms/utils/: coda_client.py  content_preprocessor.py  file_matcher.py  json_repair.py  paper_processor.py  project_paths.py  slide_cleaner.py  slide_extractor.py  slide_extractor_old.py  slide_formatter.py  slide_processor.py  social_assembler.py  transcript_cleaner.py  transcript_processor.py  visual_analyzer.py  youtube_transcript.py
tests/: test_coda_integration.py
(+5 files in other folders)
